# sdl2-asteroids

./: CMakeLists.txt
src/: asteroids.cpp  asteroids.h  drawer.cpp  drawer.h  main.cpp
